Modification couleur git titre

--- a/un.html
+++ b/un.html
@@ -17,6 +17,7 @@
 		<option>FABIEN</option>
 		<option>LAURA</option>
 		<option selected="selected">OLIVIERA</option>
+		<option>JENNIFER</option>
 	</select>
 </fieldset>
 <fieldset>
